--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+body {
+    background-color: rgba(248, 247, 247, 0.459);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Employee Portal */
+.orders {
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.orderCard {
+    margin: 10px;
+    padding: 10px;
+    border: navy solid 2px;
+    border-radius: 7px;
+    max-width: 20%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.orderCard > h2 {
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.viewBtns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.viewBtn {
+    box-sizing: border-box;
+    padding: 15px;
+    background-color: lightblue;
+    border: transparent solid 2px;
+    border-radius: 15px;
+    text-decoration: none;
+    color: black;
+    
+}
+
+.viewBtn:hover {
+    border: black solid 2px;
 }
