--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ body {
 }
 
 /* Employee Portal */
+.employeePortal > h1 {
+    text-align: center;
+}
 .orders {
     display: flex;
     flex-direction: row;
@@ -21,6 +24,16 @@ body {
     text-align: center;
 }
 
+.orderCardBtn {
+    margin: 3px;
+}
+
+.orderCardTotal {
+    border-top: 2px solid black;
+    padding-top: 5px;
+    font-weight: 800;
+}
+
 .viewBtns {
     display: flex;
     flex-direction: row;
@@ -34,11 +47,75 @@ body {
     background-color: lightblue;
     border: transparent solid 2px;
     border-radius: 15px;
+    box-shadow: 5px 5px 5px grey;
     text-decoration: none;
     color: black;
-    
 }
 
 .viewBtn:hover {
     border: black solid 2px;
+}
+
+/* Customer Portal */
+.customerPortal {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.menu {
+    min-width: 60vw;
+    padding: 20px;
+    flex-grow: 1;
+}
+
+.menu > h2 {
+    text-align: center;
+    margin: 0;
+}
+
+.menuItem-AddBtn {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    margin: 20px;
+    width: 40vw;
+    border-bottom: black 2px dashed;
+}
+
+.menuItem-AddBtn > button {
+    border-radius: 5px;
+    max-height: fit-content;
+}
+
+.menuItem > p {
+    margin: 0;
+    margin-right: 10px;
+}
+
+.ticket {
+    min-height: 80vh;
+    min-width: 25vw;
+    border: black 5px solid;
+    background-color: rgb(223, 221, 221);
+    margin: 20px;
+    padding: 10px;
+}
+
+.ticket > h2 {
+    text-align: center;
+    margin: 0;
+}
+
+.ticketTotal {
+    font-weight: 800;
+}
+
+.custNameInput > input {
+    margin: 10px;
+    text-align: center;
+}
+.ticketBottom {
+   border-top: black 2px solid;
 }
