--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: row;
     margin: 20px;
+    flex-wrap: wrap;
 }
 
 .orderCard {
@@ -18,6 +19,7 @@ body {
     border: navy solid 2px;
     border-radius: 7px;
     max-width: 20%;
+    height: fit-content;
 }
 
 .orderCard > h2 {
@@ -26,6 +28,12 @@ body {
 
 .orderCardBtn {
     margin: 3px;
+}
+
+.orderCardBtns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .orderCardTotal {
@@ -131,6 +139,10 @@ body {
 }
 .ticketBottom {
    border-top: black 2px solid;
+}
+
+.ticketError {
+    color: transparent;
 }
 
 /* Media Queries */
