--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ body {
     background-color: lightblue;
     border: transparent solid 2px;
     border-radius: 15px;
-    box-shadow: 5px 5px 5px grey;
+    box-shadow: 5px 5px 5px gray;
     text-decoration: none;
     color: black;
 }
