--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+
 body {
     background-color: rgba(248, 247, 247, 0.459);
+    font-family: 'Nunito', sans-serif;
 }
 
 /* Employee Portal */
@@ -16,10 +19,17 @@ body {
 .orderCard {
     margin: 10px;
     padding: 10px;
-    border: navy solid 2px;
+    border: grey solid 2px;
     border-radius: 7px;
     max-width: 20%;
     height: fit-content;
+
+}
+
+.orderCard:hover {
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
+    0 1px 10px 0 rgba(0, 0, 0, .12),
+    0 2px 4px -1px rgba(0, 0, 0, .2);
 }
 
 .orderCard > h2 {
@@ -28,6 +38,24 @@ body {
 
 .orderCardBtn {
     margin: 3px;
+    text-decoration: none;
+    background-color: transparent;
+    border: none;
+    color: blueviolet;
+}
+
+.deleteBtn {
+    color: blueviolet;
+}
+
+.completeBtn {
+    border: grey solid 1px;
+    border-radius: 5px;
+}
+
+.completeBtn:hover {
+    background-color: rgba(137, 43, 226, 0.13);
+    box-shadow: 1px 1px 2px rgb(0 0 0 / 0.4);
 }
 
 .orderCardBtns {
@@ -36,32 +64,50 @@ body {
     justify-content: space-around;
 }
 
+.deleteBtn {
+    border: none;
+    background-color: transparent;
+}
+
+.deleteBtn > svg:hover {
+    fill: blueviolet;
+    filter: drop-shadow(1px 1px 1px rgb(0 0 0 / 0.4));
+}
+
 .orderCardTotal {
     border-top: 2px solid black;
     padding-top: 5px;
     font-weight: 800;
 }
 
+/* Top View Buttons */
+
 .viewBtns {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     margin-top: 10px;
+    font-weight: 600;
 }
 
 .viewBtn {
     box-sizing: border-box;
-    padding: 15px;
-    background-color: lightblue;
-    border: transparent solid 2px;
-    border-radius: 15px;
-    box-shadow: 5px 5px 5px gray;
+    padding: 5px 16px;
+    width: fit-content;
+    height: fit-content;
+    background-color: blueviolet;
+    border: transparent solid 1px;
+    border-radius: 5px;
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 .viewBtn:hover {
-    border: black solid 2px;
+    border: grey solid 1px;
+    background-color: rgba(137, 43, 226, 0.904);
+    box-shadow: 0 3px 4px 0px rgba(0, 0, 0, .14),
+    0  3px 3px 0px rgba(0, 0, 0, .12),
+    0  1px 8px 0px rgba(0, 0, 0, .2);
 }
 
 /* Customer Portal */
@@ -94,7 +140,7 @@ body {
 
 .menuItem-AddBtn > button {
     border-radius: 5px;
-    max-height: fit-content;
+    height: fit-content;
 }
 
 .menuItem > p {
@@ -121,7 +167,7 @@ body {
     margin-right: 10px;
     border: none;
     background-color: transparent;
-    color: black;
+    color: red;
 }
 
 .ticket > h2 {
@@ -139,13 +185,34 @@ body {
 }
 .ticketBottom {
    border-top: black 2px solid;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   align-items: center;
+}
+
+.errorMessage {
+    text-align: center;
+    font-weight: 600;
+    color: blueviolet;
 }
 
 /* Media Queries */
 @media only screen and (max-width: 600px) {
+    .viewBtn {
+        font-size: 20px;
+        text-align: center;
+        margin: 5px;
+    }
+
     .customerPortal {
         display: block;
     }
+
+    .menu {
+        padding: 0;
+    }
+
     .menu, .menuItem-AddBtn {
         width: 90vw;
     }
@@ -165,3 +232,22 @@ body {
         max-width: 90vw;
     }
 }
+/* Spinner for Loading */
+.spinner {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
