--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,38 @@ body {
 
 }
 
+.orderCardName {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.orderCardName > button {
+    height: fit-content;
+    margin-left: 10px;
+    background-color: transparent;
+    border: none;
+}
+
+.orderCardName > button > svg:hover {
+    fill: blueviolet;
+    filter: drop-shadow(1px 1px 1px rgb(0 0 0 / 0.4));
+}
+
+.editingModeOn > input {
+    width: 150px;
+}
+
+.editingModeOn > input:focus {
+    outline: none;
+    border: blueviolet 2px solid;
+}
+
+.editingModeOn > button {
+    margin: 0;
+}
+
 .orderCard:hover {
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
     0 1px 10px 0 rgba(0, 0, 0, .12),
