--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,16 @@ body {
     flex-wrap: wrap;
 }
 
+.errorMessageHolder {
+    color: transparent;
+}
+
+.errorMessage, .errorMessageHolder {
+    margin: 0;
+}
+
+
+
 .orderCard {
     margin: 10px;
     padding: 10px;
